# python-project-83

./: Makefile  README.md  pyproject.toml
page_analyzer/: app.py  db.py  validators.py
page_analyzer/templates/: 404.html  index.html  url_detail.html  url_list.html
python-project-83/: README.md  database.sql  pyproject.toml
python-project-83/page_analyzer/: app.py  db.py  validators.py
python-project-83/page_analyzer/templates/: 404.html  base.html  index.html  url_detail.html  url_list.html
